<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loadingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoadingActivity">

    <!-- Círculo de progresso personalizado -->
    <com.example.entregador.view.CircularProgressView
        android:id="@+id/circularProgressView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/loading_circle" />

    <!-- Texto animado "Carregando..." abaixo do círculo -->
    <TextView
        android:id="@+id/textLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_initial"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:contentDescription="@string/loading_text"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/circularProgressView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textAviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_first_time_notice"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textLoading"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>